--- a/front-end/src/app/transaction/transaction-details/transaction-details.component.html
+++ b/front-end/src/app/transaction/transaction-details/transaction-details.component.html
@@ -1,18 +1,20 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit()" aria-label="Transaction Details" class="container">
   <table class="table table-bordered table-hover">
     <tbody>
       <tr>
-        <th>ID</th>
+        <th scope="row">ID</th>
         <td>{{transaction?.id}}</td>
       </tr>
       <tr>
-        <th>Date</th>
+        <th scope="row">Date</th>
         <td>{{transaction?.date | date: 'dd/MM/yyyy'}}</td>
       </tr>
       <tr>
-        <th>Comments</th>
+        <th scope="row">
+          <label for="comments">Comments</label>
+        </th>
         <td>
-          <input class="form-control" [formControl]="commentsControl" type="text" placeholder="Comments">
+          <input id="comments" class="form-control" [formControl]="commentsControl" type="text" placeholder="Comments" aria-required="true">
         </td>
       </tr>
     </tbody>
