--- a/front-end/src/app/transaction/transaction-details/transaction-details.component.html
+++ b/front-end/src/app/transaction/transaction-details/transaction-details.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" aria-label="Transaction Details" class="container">
+<form aria-label="Transaction Details" class="container">
   <table class="table table-bordered table-hover">
     <tbody>
       <tr>
@@ -19,5 +19,5 @@
       </tr>
     </tbody>
   </table>
-  <button type="submit" class="btn btn-primary">Update</button>
+  <button type="button" class="btn btn-primary" (click)="onSubmit()">Update</button>
 </form>
