--- a/front-end/src/app/transaction/transaction/transaction.component.html
+++ b/front-end/src/app/transaction/transaction/transaction.component.html
@@ -7,6 +7,7 @@
                         <th scope="col">ID</th>
                         <th scope="col">Date</th>
                         <th scope="col">Comments</th>
+                        <th scope="col">Status </th>
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
@@ -15,6 +16,7 @@
                         <td>{{ transaction.id }}</td>
                         <td>{{ transaction.date | date: 'MM/dd/yyyy' }}</td>
                         <td>{{ transaction.Comments }}</td>
+                        <td> {{transaction.status}} </td>
                         <td>
                             <button type="button" (click)="viewDetails(transaction)" [attr.aria-label]="'View details for transaction ' + transaction.id">
                                 View Details
